src/sass/side-nav.scss
@import "../../node_modules/@drewbot/sass-flexbox-grid/public/sass-flexbox/main.css";

// _   _  _____  _   _ 
// ( ) ( )(  _  )( ) ( )
// | `\| || (_) || | | |
// | , ` ||  _  || | | |
// | |`\ || | | || \_/ |
// (_) (_)(_) (_)`\___/'
// PUFFY     

.SideNav {
  &--container {
    // border: .5px solid lightblue;
    margin: 0px auto;
    padding-left: 0px;
  }
  &--row {
    // border: .5px solid lightgreen;
  }
  &--card-container {
    // border-bottom: .5px solid red;
  }
  &--card {
    // border: .5px solid red;
  }
  &--card-logo {
    height: 100%;
    width: 100%;
    max-height: 50px;
    max-width: 50px;
  }
  &--card-description {
    font-size: 18px;
    // color: gray;
  }
}

li {
  list-style-type: none;
}

.active {
  background-color: #bf1313;
  color: #fff;
  font-size: 18px;
  font-weight: 800;
  border-radius: 3px;
}

// ___    ___    ___   _____  _  _____  _   _ 
// (  _`\ (  _`\ (  _`\(_   _)(_)(  _  )( ) ( )
// | (_(_)| (_(_)| ( (_) | |  | || ( ) || `\| |
// `\__ \ |  _)_ | |  _  | |  | || | | || , ` |
// ( )_) || (_( )| (_( ) | |  | || (_) || |`\ |
// `\____)(____/'(____/' (_)  (_)(_____)(_) (_)
// PUFFY

.SideSection {
  &--container {
    // border: .5px solid lightblue;
    padding: 0px;
  }
  &--row {
    margin: 0px !important;
    // border: .5px solid lightgreen;
  }
  &--card-container {
    // border: .5px solid yellow;
  }
  &--card-preview {
    padding-left: 0px;
    // margin: auto 0px auto 0px;
  }
  &--card-info {
    // border: .5px solid red;
    padding-left: 0px;
  }
  &--post-header {
    font-size: 14px;
    color: #bf1313;
    font-weight: 600;
    margin: 0 0 10px 0;
  }
  &--post-time {
    margin: 0px 5px 0 0;
  }
  &--post-comment {
    margin: 0px 5px 0 0;
  }
  &--post-comment-count {

  }
  &--post-title {
    color: black;
    font-size: 18px;
    font-weight: 700;
  }
  &--img {
    width: 100%;
    height: 100%;
    max-width: 300px;
    max-height: 163px;
    border-radius: 3px;
  }
  &--msg-logo {
    width: 15px;
    height: 15px;
  }
}

